fantastic4Parser.java
<<<<<<< HEAD
// $ANTLR 3.3 Nov 30, 2010 12:50:56 fantastic4.g 2014-05-29 16:00:56
=======
// $ANTLR 3.3 Nov 30, 2010 12:50:56 fantastic4.g 2014-05-29 15:55:21
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class fantastic4Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDF", "CSTEINT", "CSTEBOOL", "CSTESTRING", "COMM", "WS", "'program'", "'var'", "':'", "';'", "','", "'void'", "'bool'", "'int'", "'char'", "'function'", "'('", "')'", "'ref'", "'if'", "'then'", "'else'", "'while'", "'do'", "'='", "'return'", "'{'", "'}'", "'read'", "'write'", "'&&'", "'||'", "'^'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'!='", "'not'", "'!'"
    };
    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int IDF=4;
    public static final int CSTEINT=5;
    public static final int CSTEBOOL=6;
    public static final int CSTESTRING=7;
    public static final int COMM=8;
    public static final int WS=9;

    // delegates
    // delegators


        public fantastic4Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public fantastic4Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return fantastic4Parser.tokenNames; }
    public String getGrammarFileName() { return "fantastic4.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
<<<<<<< HEAD
    // fantastic4.g:9:1: prog : 'program' IDF ( vardeclist )? ( funcdeclist )? instr ;
    public final void prog() throws RecognitionException {
        try {
            // fantastic4.g:9:13: ( 'program' IDF ( vardeclist )? ( funcdeclist )? instr )
            // fantastic4.g:9:15: 'program' IDF ( vardeclist )? ( funcdeclist )? instr
            {
            match(input,10,FOLLOW_10_in_prog32); 
            match(input,IDF,FOLLOW_IDF_in_prog34); 
            // fantastic4.g:9:29: ( vardeclist )?
=======
    // fantastic4.g:11:1: prog : 'program' IDF ( vardeclist )? ( funcdeclist )? instr -> ^( 'program' IDF ) ;
    public final fantastic4Parser.prog_return prog() throws RecognitionException {
        fantastic4Parser.prog_return retval = new fantastic4Parser.prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal1=null;
        Token IDF2=null;
        fantastic4Parser.vardeclist_return vardeclist3 = null;

        fantastic4Parser.funcdeclist_return funcdeclist4 = null;

        fantastic4Parser.instr_return instr5 = null;


        CommonTree string_literal1_tree=null;
        CommonTree IDF2_tree=null;
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_10=new RewriteRuleTokenStream(adaptor,"token 10");
        RewriteRuleSubtreeStream stream_vardeclist=new RewriteRuleSubtreeStream(adaptor,"rule vardeclist");
        RewriteRuleSubtreeStream stream_funcdeclist=new RewriteRuleSubtreeStream(adaptor,"rule funcdeclist");
        RewriteRuleSubtreeStream stream_instr=new RewriteRuleSubtreeStream(adaptor,"rule instr");
        try {
            // fantastic4.g:11:13: ( 'program' IDF ( vardeclist )? ( funcdeclist )? instr -> ^( 'program' IDF ) )
            // fantastic4.g:11:15: 'program' IDF ( vardeclist )? ( funcdeclist )? instr
            {
            string_literal1=(Token)match(input,10,FOLLOW_10_in_prog50);  
            stream_10.add(string_literal1);

            IDF2=(Token)match(input,IDF,FOLLOW_IDF_in_prog52);  
            stream_IDF.add(IDF2);

            // fantastic4.g:11:29: ( vardeclist )?
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==11) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
<<<<<<< HEAD
                    // fantastic4.g:9:29: vardeclist
                    {
                    pushFollow(FOLLOW_vardeclist_in_prog36);
                    vardeclist();

                    state._fsp--;

=======
                    // fantastic4.g:11:29: vardeclist
                    {
                    pushFollow(FOLLOW_vardeclist_in_prog54);
                    vardeclist3=vardeclist();

                    state._fsp--;

                    stream_vardeclist.add(vardeclist3.getTree());
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                    }
                    break;

            }

<<<<<<< HEAD
            // fantastic4.g:9:41: ( funcdeclist )?
=======
            // fantastic4.g:11:41: ( funcdeclist )?
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==19) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
<<<<<<< HEAD
                    // fantastic4.g:9:41: funcdeclist
                    {
                    pushFollow(FOLLOW_funcdeclist_in_prog39);
                    funcdeclist();
=======
                    // fantastic4.g:11:41: funcdeclist
                    {
                    pushFollow(FOLLOW_funcdeclist_in_prog57);
                    funcdeclist4=funcdeclist();
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                    state._fsp--;

                    stream_funcdeclist.add(funcdeclist4.getTree());

                    }
                    break;

            }

<<<<<<< HEAD
            pushFollow(FOLLOW_instr_in_prog42);
            instr();
=======
            pushFollow(FOLLOW_instr_in_prog60);
            instr5=instr();
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

            state._fsp--;

            stream_instr.add(instr5.getTree());


            // AST REWRITE
            // elements: IDF, 10
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 11:60: -> ^( 'program' IDF )
            {
                // fantastic4.g:11:63: ^( 'program' IDF )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_10.nextNode(), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class vardeclist_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "vardeclist"
<<<<<<< HEAD
    // fantastic4.g:12:1: vardeclist : varsuitdecl ( vardeclist )? ;
    public final void vardeclist() throws RecognitionException {
        try {
            // fantastic4.g:12:13: ( varsuitdecl ( vardeclist )? )
            // fantastic4.g:12:15: varsuitdecl ( vardeclist )?
            {
            pushFollow(FOLLOW_varsuitdecl_in_vardeclist64);
            varsuitdecl();

            state._fsp--;

            // fantastic4.g:12:27: ( vardeclist )?
=======
    // fantastic4.g:14:1: vardeclist : varsuitdecl ( vardeclist )? ;
    public final fantastic4Parser.vardeclist_return vardeclist() throws RecognitionException {
        fantastic4Parser.vardeclist_return retval = new fantastic4Parser.vardeclist_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        fantastic4Parser.varsuitdecl_return varsuitdecl6 = null;

        fantastic4Parser.vardeclist_return vardeclist7 = null;



        try {
            // fantastic4.g:14:13: ( varsuitdecl ( vardeclist )? )
            // fantastic4.g:14:15: varsuitdecl ( vardeclist )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_varsuitdecl_in_vardeclist90);
            varsuitdecl6=varsuitdecl();

            state._fsp--;

            adaptor.addChild(root_0, varsuitdecl6.getTree());
            // fantastic4.g:14:27: ( vardeclist )?
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==11) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
<<<<<<< HEAD
                    // fantastic4.g:12:27: vardeclist
                    {
                    pushFollow(FOLLOW_vardeclist_in_vardeclist66);
                    vardeclist();
=======
                    // fantastic4.g:14:27: vardeclist
                    {
                    pushFollow(FOLLOW_vardeclist_in_vardeclist92);
                    vardeclist7=vardeclist();
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                    state._fsp--;

                    adaptor.addChild(root_0, vardeclist7.getTree());

                    }
                    break;

            }


            }

<<<<<<< HEAD
=======
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "vardeclist"

    public static class varsuitdecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "varsuitdecl"
<<<<<<< HEAD
    // fantastic4.g:15:1: varsuitdecl : 'var' idenlist ':' typename ';' ;
    public final void varsuitdecl() throws RecognitionException {
        try {
            // fantastic4.g:15:13: ( 'var' idenlist ':' typename ';' )
            // fantastic4.g:15:15: 'var' idenlist ':' typename ';'
            {
            match(input,11,FOLLOW_11_in_varsuitdecl100); 
            pushFollow(FOLLOW_idenlist_in_varsuitdecl102);
            idenlist();

            state._fsp--;

            match(input,12,FOLLOW_12_in_varsuitdecl104); 
            pushFollow(FOLLOW_typename_in_varsuitdecl106);
            typename();

            state._fsp--;

            match(input,13,FOLLOW_13_in_varsuitdecl108); 
=======
    // fantastic4.g:17:1: varsuitdecl : 'var' idenlist ':' typename ';' -> 'var' ;
    public final fantastic4Parser.varsuitdecl_return varsuitdecl() throws RecognitionException {
        fantastic4Parser.varsuitdecl_return retval = new fantastic4Parser.varsuitdecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal8=null;
        Token char_literal10=null;
        Token char_literal12=null;
        fantastic4Parser.idenlist_return idenlist9 = null;

        fantastic4Parser.typename_return typename11 = null;


        CommonTree string_literal8_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_11=new RewriteRuleTokenStream(adaptor,"token 11");
        RewriteRuleTokenStream stream_12=new RewriteRuleTokenStream(adaptor,"token 12");
        RewriteRuleTokenStream stream_13=new RewriteRuleTokenStream(adaptor,"token 13");
        RewriteRuleSubtreeStream stream_idenlist=new RewriteRuleSubtreeStream(adaptor,"rule idenlist");
        RewriteRuleSubtreeStream stream_typename=new RewriteRuleSubtreeStream(adaptor,"rule typename");
        try {
            // fantastic4.g:17:13: ( 'var' idenlist ':' typename ';' -> 'var' )
            // fantastic4.g:17:15: 'var' idenlist ':' typename ';'
            {
            string_literal8=(Token)match(input,11,FOLLOW_11_in_varsuitdecl127);  
            stream_11.add(string_literal8);

            pushFollow(FOLLOW_idenlist_in_varsuitdecl129);
            idenlist9=idenlist();

            state._fsp--;

            stream_idenlist.add(idenlist9.getTree());
            char_literal10=(Token)match(input,12,FOLLOW_12_in_varsuitdecl131);  
            stream_12.add(char_literal10);

            pushFollow(FOLLOW_typename_in_varsuitdecl133);
            typename11=typename();

            state._fsp--;

            stream_typename.add(typename11.getTree());
            char_literal12=(Token)match(input,13,FOLLOW_13_in_varsuitdecl135);  
            stream_13.add(char_literal12);
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5



            // AST REWRITE
            // elements: 11
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 17:47: -> 'var'
            {
                adaptor.addChild(root_0, stream_11.nextNode());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "varsuitdecl"

    public static class idenlist_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "idenlist"
<<<<<<< HEAD
    // fantastic4.g:18:1: idenlist : ( IDF | IDF ',' idenlist );
    public final void idenlist() throws RecognitionException {
        try {
            // fantastic4.g:18:13: ( IDF | IDF ',' idenlist )
=======
    // fantastic4.g:20:1: idenlist : ( IDF -> ^( IDF ':' ) | IDF ',' idenlist -> ^( IDF ',' ) );
    public final fantastic4Parser.idenlist_return idenlist() throws RecognitionException {
        fantastic4Parser.idenlist_return retval = new fantastic4Parser.idenlist_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDF13=null;
        Token IDF14=null;
        Token char_literal15=null;
        fantastic4Parser.idenlist_return idenlist16 = null;


        CommonTree IDF13_tree=null;
        CommonTree IDF14_tree=null;
        CommonTree char_literal15_tree=null;
        RewriteRuleTokenStream stream_14=new RewriteRuleTokenStream(adaptor,"token 14");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleSubtreeStream stream_idenlist=new RewriteRuleSubtreeStream(adaptor,"rule idenlist");
        try {
            // fantastic4.g:20:13: ( IDF -> ^( IDF ':' ) | IDF ',' idenlist -> ^( IDF ',' ) )
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDF) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==14) ) {
                    alt4=2;
                }
                else if ( (LA4_1==12) ) {
                    alt4=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
<<<<<<< HEAD
                    // fantastic4.g:18:15: IDF
                    {
                    match(input,IDF,FOLLOW_IDF_in_idenlist144); 
=======
                    // fantastic4.g:20:15: IDF
                    {
                    IDF13=(Token)match(input,IDF,FOLLOW_IDF_in_idenlist175);  
                    stream_IDF.add(IDF13);



                    // AST REWRITE
                    // elements: IDF, 12
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 20:20: -> ^( IDF ':' )
                    {
                        // fantastic4.g:20:23: ^( IDF ':' )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_IDF.nextNode(), root_1);
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                        adaptor.addChild(root_1, (CommonTree)adaptor.create(12, "12"));

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
<<<<<<< HEAD
                    // fantastic4.g:19:15: IDF ',' idenlist
                    {
                    match(input,IDF,FOLLOW_IDF_in_idenlist160); 
                    match(input,14,FOLLOW_14_in_idenlist162); 
                    pushFollow(FOLLOW_idenlist_in_idenlist164);
                    idenlist();
=======
                    // fantastic4.g:21:15: IDF ',' idenlist
                    {
                    IDF14=(Token)match(input,IDF,FOLLOW_IDF_in_idenlist200);  
                    stream_IDF.add(IDF14);

                    char_literal15=(Token)match(input,14,FOLLOW_14_in_idenlist202);  
                    stream_14.add(char_literal15);

                    pushFollow(FOLLOW_idenlist_in_idenlist204);
                    idenlist16=idenlist();
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                    state._fsp--;

                    stream_idenlist.add(idenlist16.getTree());


                    // AST REWRITE
                    // elements: 14, IDF
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 21:32: -> ^( IDF ',' )
                    {
                        // fantastic4.g:21:35: ^( IDF ',' )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_IDF.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_14.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "idenlist"

    public static class typename_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "typename"
<<<<<<< HEAD
    // fantastic4.g:22:1: typename : ( 'void' | 'bool' | 'int' | 'char' );
    public final void typename() throws RecognitionException {
        try {
            // fantastic4.g:22:13: ( 'void' | 'bool' | 'int' | 'char' )
            // fantastic4.g:
            {
            if ( (input.LA(1)>=15 && input.LA(1)<=18) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
=======
    // fantastic4.g:24:1: typename : ( 'void' -> 'void' | 'bool' -> 'bool' | 'int' -> 'int' | 'char' -> 'char' );
    public final fantastic4Parser.typename_return typename() throws RecognitionException {
        fantastic4Parser.typename_return retval = new fantastic4Parser.typename_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal17=null;
        Token string_literal18=null;
        Token string_literal19=null;
        Token string_literal20=null;

        CommonTree string_literal17_tree=null;
        CommonTree string_literal18_tree=null;
        CommonTree string_literal19_tree=null;
        CommonTree string_literal20_tree=null;
        RewriteRuleTokenStream stream_15=new RewriteRuleTokenStream(adaptor,"token 15");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");

        try {
            // fantastic4.g:24:13: ( 'void' -> 'void' | 'bool' -> 'bool' | 'int' -> 'int' | 'char' -> 'char' )
            int alt5=4;
            switch ( input.LA(1) ) {
            case 15:
                {
                alt5=1;
                }
                break;
            case 16:
                {
                alt5=2;
                }
                break;
            case 17:
                {
                alt5=3;
                }
                break;
            case 18:
                {
                alt5=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5
            }

            switch (alt5) {
                case 1 :
                    // fantastic4.g:24:15: 'void'
                    {
                    string_literal17=(Token)match(input,15,FOLLOW_15_in_typename248);  
                    stream_15.add(string_literal17);



                    // AST REWRITE
                    // elements: 15
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 24:22: -> 'void'
                    {
                        adaptor.addChild(root_0, stream_15.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // fantastic4.g:25:15: 'bool'
                    {
                    string_literal18=(Token)match(input,16,FOLLOW_16_in_typename268);  
                    stream_16.add(string_literal18);



                    // AST REWRITE
                    // elements: 16
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 25:22: -> 'bool'
                    {
                        adaptor.addChild(root_0, stream_16.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // fantastic4.g:26:15: 'int'
                    {
                    string_literal19=(Token)match(input,17,FOLLOW_17_in_typename288);  
                    stream_17.add(string_literal19);



                    // AST REWRITE
                    // elements: 17
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 26:22: -> 'int'
                    {
                        adaptor.addChild(root_0, stream_17.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // fantastic4.g:27:15: 'char'
                    {
                    string_literal20=(Token)match(input,18,FOLLOW_18_in_typename309);  
                    stream_18.add(string_literal20);



                    // AST REWRITE
                    // elements: 18
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 27:22: -> 'char'
                    {
                        adaptor.addChild(root_0, stream_18.nextNode());

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "typename"

    public static class funcdeclist_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "funcdeclist"
<<<<<<< HEAD
    // fantastic4.g:28:1: funcdeclist : funcdecl ( funcdeclist )? ;
    public final void funcdeclist() throws RecognitionException {
        try {
            // fantastic4.g:28:13: ( funcdecl ( funcdeclist )? )
            // fantastic4.g:28:15: funcdecl ( funcdeclist )?
            {
            pushFollow(FOLLOW_funcdecl_in_funcdeclist281);
            funcdecl();

            state._fsp--;

            // fantastic4.g:28:24: ( funcdeclist )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==19) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // fantastic4.g:28:24: funcdeclist
                    {
                    pushFollow(FOLLOW_funcdeclist_in_funcdeclist283);
                    funcdeclist();

                    state._fsp--;

=======
    // fantastic4.g:30:1: funcdeclist : funcdecl ( funcdeclist )? ;
    public final fantastic4Parser.funcdeclist_return funcdeclist() throws RecognitionException {
        fantastic4Parser.funcdeclist_return retval = new fantastic4Parser.funcdeclist_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        fantastic4Parser.funcdecl_return funcdecl21 = null;

        fantastic4Parser.funcdeclist_return funcdeclist22 = null;



        try {
            // fantastic4.g:30:13: ( funcdecl ( funcdeclist )? )
            // fantastic4.g:30:15: funcdecl ( funcdeclist )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_funcdecl_in_funcdeclist346);
            funcdecl21=funcdecl();

            state._fsp--;

            adaptor.addChild(root_0, funcdecl21.getTree());
            // fantastic4.g:30:24: ( funcdeclist )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==19) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // fantastic4.g:30:24: funcdeclist
                    {
                    pushFollow(FOLLOW_funcdeclist_in_funcdeclist348);
                    funcdeclist22=funcdeclist();

                    state._fsp--;

                    adaptor.addChild(root_0, funcdeclist22.getTree());
>>>>>>> 210565a566c324f68400d4147afe34ebcc6f87d5

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);
